--- a/smnav/move_base_config/dwa_local_planner_params.yaml
+++ b/smnav/move_base_config/dwa_local_planner_params.yaml
@@ -6,24 +6,26 @@ DWAPlannerROS:
   acc_lim_x: 2.5
   acc_lim_y: 2.5
 
-  max_vel_x: 0.65
-  min_vel_x: 0.0
+  max_vel_x: 0.25
+  min_vel_x: 0.1
 
   max_vel_y: 0
   min_vel_y: 0
 
-  max_trans_vel: 0.65
+  max_trans_vel: 0.25
   min_trans_vel: 0.1
 
-  max_rot_vel: 0.65
+  max_rot_vel: 0.25
   min_rot_vel: 0.0
 
   sim_time: 1.7
   sim_granularity: 0.025
 
+  controller_frequency: 5
+
   goal_distance_bias: 32.0
   path_distance_bias: 24.0
-  occdist_scale: 0.01
+  occdist_scale: 0.5
 
   stop_time_buffer: 0.2
   oscillation_reset_dist: 0.05
@@ -33,14 +35,14 @@ DWAPlannerROS:
   scaling_speed: 0.25
   max_scaling_factor: 0.2
 
-  vx_samples: 3
+  vx_samples: 2
   vy_samples: 0
-  vtheta_samples: 3
+  vtheta_samples: 2
 
   sim_period: 0.1
 
-  xy_goal_tolerance: 0.2
-  yaw_goal_tolerance: 0.17
+  xy_goal_tolerance: 1
+  yaw_goal_tolerance: 0.5
 
   rot_stopped_vel: 0.01
   trans_stopped_vel: 0.01
